overflow fix

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -414,6 +414,10 @@
     .highlight_image_3 {
         align-self: center;
     }
+
+    .content_wrapper {
+        overflow: hidden;
+    }
   
 }
 
